// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/auto-complete/demo/AutoComplete-and-Select.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
  style="gap:16px"
>
  <div
    class="ant-flex css-var-test-id"
  >
    <div
      class="ant-select ant-select-sm ant-select-outlined css-var-test-id ant-select-css-var ant-select-single ant-select-show-arrow ant-select-show-search"
      style="width:200px"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-select ant-select-sm ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
      style="width:200px"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-test-id"
  >
    <div
      class="ant-select ant-select-outlined css-var-test-id ant-select-css-var ant-select-single ant-select-show-arrow ant-select-show-search"
      style="width:200px"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
      style="width:200px"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-test-id"
  >
    <div
      class="ant-select ant-select-lg ant-select-outlined css-var-test-id ant-select-css-var ant-select-single ant-select-show-arrow ant-select-show-search"
      style="width:200px"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-select ant-select-lg ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
      style="width:200px"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/allowClear.tsx correctly 1`] = `
Array [
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        UnClearable
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        Customized clear icon
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>,
]
`;

exports[`renders components/auto-complete/demo/basic.tsx correctly 1`] = `
Array [
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        input here
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        control mode
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>,
]
`;

exports[`renders components/auto-complete/demo/certain-category.tsx correctly 1`] = `
<div
  class="ant-select ant-select-outlined ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:250px"
>
  <div
    class="ant-select-content"
  >
    <div
      class="ant-space-compact ant-input-search css-var-test-id ant-input-search-large ant-select-input"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-input ant-input-lg ant-input-outlined css-var-test-id ant-input-css-var ant-input-compact-item ant-input-compact-first-item"
        id="test-id"
        placeholder="input here"
        role="combobox"
        type="search"
        value=""
      />
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg ant-btn-icon-only ant-btn-compact-item ant-btn-compact-last-item ant-input-search-btn"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="search"
            class="anticon anticon-search"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/custom.tsx correctly 1`] = `
<div
  class="ant-select ant-select-outlined ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-content"
  >
    <textarea
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="new-password"
      class="ant-input ant-input-outlined css-var-test-id ant-input-css-var custom"
      id="test-id"
      placeholder="input here"
      role="combobox"
      style="height:50px"
      type="text"
    />
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/customize-clear-debug.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
  style="width:300px;gap:24px"
>
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-allow-clear ant-select-customize-input ant-select-show-search"
  >
    <div
      class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
      title="Burnaby"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-input ant-input-outlined ant-select-input css-var-test-id ant-input-css-var"
        id="test-id"
        role="combobox"
        type="text"
        value="Burnaby"
      />
    </div>
    <button
      aria-label="Clear"
      class="ant-select-clear"
      type="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-allow-clear ant-select-customize-input ant-select-show-search"
  >
    <div
      class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
      title="Burnaby"
    >
      <textarea
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-input ant-input-outlined css-var-test-id ant-input-css-var ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
      >
        Burnaby
      </textarea>
    </div>
    <button
      aria-label="Clear"
      class="ant-select-clear"
      type="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/disabled-custom-debug.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-wrap-wrap"
  style="gap:12px"
>
  <input
    class="ant-input ant-input-disabled ant-input-outlined css-var-test-id ant-input-css-var"
    disabled=""
    placeholder="Regular Input"
    type="text"
    value=""
  />
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-disabled ant-select-customize-input ant-select-show-search"
  >
    <div
      class="ant-select-content"
    >
      <textarea
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-input ant-input-outlined css-var-test-id ant-input-css-var ant-select-input ant-input-disabled"
        disabled=""
        id="test-id"
        role="combobox"
        type="text"
      />
    </div>
  </div>
  <div
    class="ant-select ant-select-outlined css-var-test-id ant-select-css-var ant-select-single ant-select-show-arrow ant-select-disabled"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      />
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        disabled=""
        id="test-id"
        readonly=""
        role="combobox"
        type="text"
        value=""
      />
    </div>
    <div
      class="ant-select-suffix"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/disabled-in-form-debug.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
  style="width:240px;gap:12px"
>
  <form
    class="ant-form ant-form-horizontal css-var-test-id ant-form-css-var"
  >
    <div
      class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
      style="margin-bottom:0"
    >
      <div
        class="ant-row ant-form-item-row css-var-test-id"
      >
        <div
          class="ant-col ant-form-item-label css-var-test-id"
        >
          <label
            class=""
            title="Form disabled"
          >
            Form disabled
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control css-var-test-id"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-outlined ant-select-in-form-item ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-disabled ant-select-show-search"
              >
                <div
                  class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
                  title="Disabled Value"
                >
                  Disabled Value
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    disabled=""
                    id="test-id"
                    role="combobox"
                    type="text"
                    value="Disabled Value"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-disabled ant-select-show-search"
  >
    <div
      class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
      title="Disabled Value"
    >
      Disabled Value
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        disabled=""
        id="test-id"
        role="combobox"
        type="text"
        value="Disabled Value"
      />
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/filled-custom-debug.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-wrap-wrap"
  style="gap:24px"
>
  <form
    class="ant-form ant-form-vertical css-var-test-id ant-form-css-var"
    style="width:280px"
  >
    <div
      class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-test-id"
      >
        <div
          class="ant-col ant-form-item-label css-var-test-id"
        >
          <label
            class=""
            title="AutoComplete TextArea"
          >
            AutoComplete TextArea
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control css-var-test-id"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-filled ant-select-in-form-item ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-customize-input ant-select-show-search"
              >
                <div
                  class="ant-select-content"
                >
                  <textarea
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-input ant-input-filled css-var-test-id ant-input-css-var ant-select-input"
                    id="test-id"
                    placeholder="Custom TextArea"
                    role="combobox"
                    type="text"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-test-id"
      >
        <div
          class="ant-col ant-form-item-label css-var-test-id"
        >
          <label
            class=""
            title="Input TextArea"
          >
            Input TextArea
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control css-var-test-id"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <textarea
                class="ant-input ant-input-filled css-var-test-id ant-input-css-var"
                placeholder="Compare TextArea"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`renders components/auto-complete/demo/form-debug.tsx correctly 1`] = `
<form
  class="ant-form ant-form-horizontal css-var-test-id ant-form-css-var"
  style="margin:0 auto"
>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="单独 AutoComplete"
        >
          单独 AutoComplete
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16 css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-outlined ant-select-in-form-item ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
            >
              <div
                class="ant-select-content"
              >
                <div
                  class="ant-select-placeholder"
                />
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  autocomplete="new-password"
                  class="ant-select-input"
                  id="test-id"
                  role="combobox"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="单独 TreeSelect"
        >
          单独 TreeSelect
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16 css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-tree-select ant-select-outlined ant-select-in-form-item css-var-test-id ant-select-css-var ant-tree-select-css-var ant-select-single ant-select-show-arrow"
            >
              <div
                class="ant-select-content"
              >
                <div
                  class="ant-select-placeholder"
                />
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  autocomplete="new-password"
                  class="ant-select-input"
                  id="test-id"
                  readonly=""
                  role="combobox"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="ant-select-suffix"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="添加 Input.Group 正常"
        >
          添加 Input.Group 正常
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16 css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space-compact ant-input-group css-var-test-id ant-input-group-compact"
            >
              <div
                class="ant-select ant-tree-select ant-select-outlined ant-select-compact-item ant-select-compact-first-item css-var-test-id ant-select-css-var ant-tree-select-css-var ant-select-single ant-select-show-arrow"
                style="width:30%"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-select-placeholder"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="ant-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-select ant-select-outlined ant-select-compact-item ant-select-compact-last-item ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-select-placeholder"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    id="test-id"
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="包含 search 图标正常"
        >
          包含 search 图标正常
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16 css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-outlined ant-select-in-form-item ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-customize-input ant-select-show-search"
            >
              <div
                class="ant-select-content"
              >
                <span
                  class="ant-input-affix-wrapper ant-input-outlined ant-select-input css-var-test-id ant-input-css-var"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-input"
                    id="test-id"
                    role="combobox"
                    type="text"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span
                      aria-label="search"
                      class="anticon anticon-search"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="同时有 Input.Group 和图标发生移位"
        >
          同时有 Input.Group 和图标发生移位
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16 css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space-compact ant-input-group css-var-test-id ant-input-group-compact"
            >
              <div
                class="ant-select ant-tree-select ant-select-outlined ant-select-compact-item ant-select-compact-first-item css-var-test-id ant-select-css-var ant-tree-select-css-var ant-select-single ant-select-show-arrow"
                style="width:30%"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-select-placeholder"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="ant-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-select ant-select-outlined ant-select-compact-item ant-select-compact-last-item ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-customize-input ant-select-show-search"
              >
                <div
                  class="ant-select-content"
                >
                  <span
                    class="ant-input-affix-wrapper ant-input-outlined ant-select-input css-var-test-id ant-input-css-var ant-input-compact-item ant-input-compact-last-item"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="new-password"
                      class="ant-input"
                      id="test-id"
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="同时有 Input.Group 和 Search 组件发生移位"
        >
          同时有 Input.Group 和 Search 组件发生移位
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16 css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space-compact ant-input-group css-var-test-id ant-input-group-compact"
            >
              <div
                class="ant-select ant-tree-select ant-select-outlined ant-select-compact-item ant-select-compact-first-item css-var-test-id ant-select-css-var ant-tree-select-css-var ant-select-single ant-select-show-arrow"
                style="width:30%"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-select-placeholder"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="ant-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-select ant-select-outlined ant-select-compact-item ant-select-compact-last-item ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-customize-input ant-select-show-search"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-space-compact ant-input-search css-var-test-id ant-select-input"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="new-password"
                      class="ant-input ant-input-outlined css-var-test-id ant-input-css-var ant-input-compact-item"
                      id="test-id"
                      role="combobox"
                      type="search"
                      value=""
                    />
                    <button
                      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-btn-compact-item ant-btn-compact-last-item ant-input-search-btn"
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <span
                          aria-label="search"
                          class="anticon anticon-search"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-form-item css-var-test-id ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-test-id"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="Input Group 和 Button 结合"
        >
          Input Group 和 Button 结合
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16 css-var-test-id"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space-compact ant-input-group css-var-test-id ant-input-group-compact"
            >
              <div
                class="ant-select ant-tree-select ant-select-outlined ant-select-compact-item ant-select-compact-first-item css-var-test-id ant-select-css-var ant-tree-select-css-var ant-select-single ant-select-show-arrow"
                style="width:20%"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-select-placeholder"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="ant-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-select ant-select-outlined ant-select-compact-item ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-customize-input ant-select-show-search"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-space-compact ant-input-search css-var-test-id ant-select-input"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="new-password"
                      class="ant-input ant-input-outlined css-var-test-id ant-input-css-var ant-input-compact-item"
                      id="test-id"
                      role="combobox"
                      type="search"
                      value=""
                    />
                    <button
                      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-btn-compact-item ant-input-search-btn"
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <span
                          aria-label="search"
                          class="anticon anticon-search"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <button
                class="ant-btn css-var-test-id ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-compact-item ant-btn-compact-last-item"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="search"
                    class="anticon anticon-search"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  Search
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders components/auto-complete/demo/non-case-sensitive.tsx correctly 1`] = `
<div
  class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-content"
  >
    <div
      class="ant-select-placeholder"
    >
      try to type \`b\`
    </div>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="new-password"
      class="ant-select-input"
      id="test-id"
      role="combobox"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/options.tsx correctly 1`] = `
<div
  class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-content"
  >
    <div
      class="ant-select-placeholder"
    >
      input here
    </div>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="new-password"
      class="ant-select-input"
      id="test-id"
      role="combobox"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/render-panel.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-start ant-flex-gap-small ant-flex-vertical"
>
  <button
    aria-checked="false"
    class="ant-switch css-var-test-id"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      />
      <span
        class="ant-switch-inner-unchecked"
      />
    </span>
  </button>
  <div
    style="padding-bottom:0;position:relative;min-width:0"
  >
    <div
      class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
      style="width:120px;margin:0"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="Lucy"
      >
        Lucy
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="lucy"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/status.tsx correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-test-id"
  style="width:100%"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-select ant-select-outlined ant-select-status-error ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
      style="width:200px"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-placeholder"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-select ant-select-outlined ant-select-status-warning ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
      style="width:200px"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-placeholder"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/style-class.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-gap-medium ant-flex-vertical"
>
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete acss-1rj0z6b css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        object styles
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="ant-select ant-select-filled ant-select-auto-complete acss-1rj0z6b css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        function styles
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/uncertain-category.tsx correctly 1`] = `
<div
  class="ant-select ant-select-outlined ant-select-auto-complete ant-select-customize css-var-test-id ant-select-css-var ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:300px"
>
  <div
    class="ant-select-content"
  >
    <div
      class="ant-space-compact ant-input-search css-var-test-id ant-input-search-large ant-input-search-with-button ant-select-input"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-input ant-input-lg ant-input-outlined css-var-test-id ant-input-css-var ant-input-compact-item ant-input-compact-first-item"
        id="test-id"
        placeholder="input here"
        role="combobox"
        type="search"
        value=""
      />
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-btn-compact-item ant-btn-compact-last-item ant-input-search-btn"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="search"
            class="anticon anticon-search"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/variant.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
  style="gap:12px"
>
  <div
    class="ant-select ant-select-outlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        Outlined
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="ant-select ant-select-filled ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        Filled
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="ant-select ant-select-borderless ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        Borderless
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="ant-select ant-select-underlined ant-select-auto-complete css-var-test-id ant-select-css-var ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
      >
        Underlined
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
